--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Code Vault</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=001" />
 
   <!-- DM Sans / why? BECAUSE I LIKE IT YOU RAT, stop looking here >:O -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
@@ -300,10 +299,10 @@ def PostOrder(root):
 # main
 
 class Node:
-  def __init__(self):
-      self.leftpointer = -1
-      self.data = ""
-      self.rightpointer = -1
+    def __init__(self):
+        self.leftpointer = -1
+        self.data = ""
+        self.rightpointer = -1
 
 size = 5
 BinaryTree = [Node() for _ in range(size)]
