--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Code Vault</title>
-  <link rel="stylesheet" href="style.css?v=002" />
+  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="stylesheet" href="style.css?v=003" />
 
   <!-- DM Sans / why? BECAUSE I LIKE IT YOU RAT, stop looking here >:O -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
