--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@ BinaryTree[4].leftpointer = -1
         <ul>
           <li><a href="#code1">Linear Search</a></li>
           <li><a href="#code2">Binary Search</a></li>
+          <li><a href="#code2.1">Recursive Binary Search</a></li>
           <li><a href="#code3">Bubble Sort</a></li>
           <li><a href="#code4">Insertion Sort</a></li>
           <li><a href="#code5">Stack</a></li>
